# openshift-tutorial

./: .gitignore  .mcp.json  README.md  k8s_vs_openshift.md  tutorial_my.md  tutorial_syllabus.md
.claude/: CLAUDE.md  settings.json
.claude/memory/: MEMORY.md  user_profile.md
.claude/rules/: k8s-to-openshift.md  lesson-content.md  manifest-standards.md  tutorial-structure.md
tutorial/: .env.example  .gitignore  README.md  age-public-key.md  syllabus.md
tutorial/L01_deploy_microservices/: README.md
tutorial/L01_projects/: README.md
tutorial/L02_builds_and_images/: README.md
tutorial/L02_expose_externally/: README.md
tutorial/L03_deploy_microservices/: README.md
tutorial/L03_service_mesh/: README.md
tutorial/L04_builds_and_images/: README.md
tutorial/L04_expose_externally/: README.md
tutorial/L05_projects/: README.md
tutorial/L05_service_mesh/: README.md  TEST.md
tutorial/L06_auth_and_identity/: README.md
tutorial/L07_monitoring_and_logging/: README.md  TEST.md
tutorial/L08_cicd_pipeline/: README.md
tutorial/L09_gitops/: README.md
tutorial/L10_serverless/: README.md
tutorial/L11_app_auth_keycloak/: README.md
tutorial/L12_monitoring_and_logging_grafana/: README.md  TEST.md
tutorial/L13_cicd_pipeline_github_actions/: README.md
tutorial/shared_app/analytics-service/: Dockerfile  app.py  auth.py  build-and-push.sh  pyproject.toml
tutorial_ai/: README.md  openshift_ai_docs.md  other_docs.md
tutorial_ai/01_redhat_ai/: README.md  syllabus.md
tutorial_ai/02_openshift_ai/: syllabus.md
tutorial_personalized/: README.md
(+1201 files in other folders)
