[project]
name = "analytics-service"
version = "1.0.0"
description = "ShopInsights Analytics Service — FastAPI + DuckDB"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "duckdb>=1.1.0",
    "pydantic>=2.9.0",
    "pyarrow>=17.0.0",
    "httpx>=0.27.0",
]
